# job-hunter

./: .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
docs/: acceptance_criteria.md  atgp_adapter_spec.md  atgp_manual_smoke.md  future_site_addition.md  job_search_module_design.md  job_search_module_wbs.md  known_constraints.md  local_operation_guide.md  logging_design.md  test_fixture_policy.md
migrations/: env.py
migrations/versions/: 20260521_0001_create_initial_tables.py  20260521_0002_create_master_tables.py  20260522_0003_create_site_master_tables.py
src/job_search_rss/: __init__.py  api.py  cli.py
tests/: test_cli.py  test_logging.py  test_scheduler.py  test_settings.py
tests/acceptance/: test_atgp_fixture_to_rss.py  test_collection_change_detection.py  test_subscription_condition_management.py  test_subscription_to_generated_rss.py  test_subscription_to_rss.py
tests/adapters/: test_atgp_error_handling.py  test_atgp_fixtures.py  test_atgp_job_detail_parser.py  test_atgp_job_list_parser.py  test_atgp_occupation_parser.py  test_atgp_page_fetcher.py  test_atgp_pagination.py  test_atgp_playwright_master_fetcher.py  test_atgp_region_parser.py  test_atgp_search_request.py  test_atgp_site_adapter.py
tests/api/: test_di.py  test_subscription_api.py
tests/domain/: test_collection_condition.py  test_condition_values.py  test_history.py  test_job.py  test_subscription_condition.py
tests/fakes/: __init__.py  repository.py  rss_renderer.py  site_adapter.py  test_repository.py  test_rss_renderer.py  test_site_adapter.py  types.py
tests/infrastructure/: test_migrations.py  test_sqlalchemy_acceptance.py  test_sqlalchemy_repository.py
tests/rss/: test_xml_rss_renderer.py
tests/usecase/: test_detect_job_changes.py  test_generate_rss_feed.py  (+6 more)
(+32 files in other folders)
