[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-rss"
version = "0.1.0"
description = "RSS feed generator for job posting changes."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.27",
    "lxml>=5.2",
    "playwright>=1.45",
    "sqlalchemy>=2.0",
]

[project.scripts]
job-search-rss = "job_search_rss.cli:main"

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
